--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://voidii.github.io/CS185/",
+  "homepage": "https://voidii.github.io/CS185_react/",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
@@ -7,12 +7,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
     "firebase": "^7.14.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-grid-system": "^6.3.1",
     "react-modal": "^3.11.2",
     "react-modal-image": "^2.5.0",
+    "react-popupbox": "^2.0.8",
     "react-scripts": "3.4.1",
     "react-zmage": "^0.8.5-beta.31"
   },
@@ -38,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.2.0"
   }
 }
