--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.10.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "bootstrap": "^4.5.0",
     "firebase": "^7.14.2",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-dropdown": "^1.7.0",
     "react-grid-system": "^6.3.1",
     "react-modal": "^3.11.2",
     "react-modal-image": "^2.5.0",
