--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.13.0",
     "@material-ui/core": "^4.10.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "antd": "^3.0.0",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
+    "d3": "^5.16.0",
     "firebase": "^7.14.2",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
@@ -19,9 +23,13 @@
     "react-modal": "^3.11.2",
     "react-modal-image": "^2.5.0",
     "react-popupbox": "^2.0.8",
+    "react-redux": "^7.2.0",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "3.4.1",
     "react-zmage": "^0.8.5-beta.31",
-    "reactjs-popup": "^1.5.0"
+    "reactjs-popup": "^1.5.0",
+    "redux": "^4.0.5",
+    "shortid": "^2.2.15"
   },
   "scripts": {
     "start": "react-scripts start",
